<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/navigation_home"
        android:icon="@drawable/ic_home_black_24dp"
        android:title="@string/title_home" />

    <item
        android:id="@+id/navigation_dashboard"
        android:icon="@drawable/ic_dashboard_black_24dp"
        android:title="@string/title_dashboard" />

    <item
        android:id="@+id/navigation_notifications"
        android:icon="@drawable/ic_notifications_black_24dp"
        android:title="@string/title_notifications" />

    <item
        android:id="@+id/navigation_saleafter"
        android:icon="@drawable/ic_headset_mic_black_24dp"
        android:title="@string/title_saleafter" />

    <item
        android:id="@+id/navigation_send"
        android:icon="@drawable/ic_directions_bike_black_24dp"
        android:title="@string/title_send" />
</menu>
